--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,7 @@ github_username:  Tony-Xiong
 
 # Build settings
 markdown: kramdown
-theme: minima
-# theme: jekyll-theme-slate
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
 
