--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  Tony-Xiong
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-tactile
+theme: minima
 plugins:
   - jekyll-feed
 
