--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: freexyxyz@gmail.com
 # line in _config.yml. It will appear in your document head meta (for
 # Google search results) and in your feed.xml site description.
 description: > # this means to ignore newlines until "baseurl:"
-  慵懒的舟舟。毕业N年后才转做码农，大龄程序员。喜欢研究各种提高效率的开发方式。喜欢折腾些看起来没啥用的技术。English is so so.
+  感兴趣的太多，时间太少，变化却太快。忙了一阵后，就只想慵懒的晒着太阳发呆了~
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: freexyxyz
