--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ sns:
   github: '//github.com/Tony-xiong'
   twitter: '//www.twitter.com/freexyxyz'
   email: mailto:freexyxyz@gmail.com
+  rss: ''
 
 # Tags 设置标签
 recommend-tags: true # whether or not display recommend-tags on the sidebar
