--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ keyword: 'java, XYZ, 后端, 全栈开发,设计'
 url: '' # your host
 
 # if you don't need baseurl, you should leave this value blank.
-baseurl: 'https://tony-xiong.github.io'
+baseurl: ''
 
 # Navigation links
 nav:
